--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,11 @@
 	<version>0.0.5</version>
 	<name>my-app</name>
 	<url>http://maven.apache.org</url>
+	
+	<properties> 
+   		<maven.compiler.source>1.8</maven.compiler.source>
+  	 	<maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
 
 	<dependencies>
 		<dependency>
